Finish structuring HTML and adding content with images

--- a/index.html
+++ b/index.html
@@ -9,30 +9,49 @@
     <body>
         <div class="header-container">
             <div class="header-navbar">
-                <img src="" alt="A fancy logo">
+                <img src="./images/logo.svg" alt="A travel suitcase logo" width="50">
                 <ul>
-                    <li><a>header link one</a></li>
-                    <li><a>header link two</a></li>
-                    <li><a>header link three</a></li>
+                    <li><a>Countries</a></li>
+                    <li><a>Cities</a></li>
+                    <li><a>Guides</a></li>
                 </ul>
             </div>
             <div class="header-content">
-                <img src="" alt="A fancy header image">
+                <h1>Travel is great!</h1>
+                <p>Who doesn't love travel? Traveling allows you to see the world, meet new people and have plenty of new experiences!</p>
+                <button>Start traveling</button>
+                <img src="./images/main.jpg" alt="A fancy header image" width="400">
             </div>
         </div>
         <div class="content-container">
+            <h2>Best places to visit!</h2>
             <div class="content-card">
+                <img src="./images/city1.jpg" alt="A photo of the city" width="150">
+                <p>Visit this place!</p>
             </div>
             <div class="content-card">
+                <img src="./images/city2.jpg" alt="A photo of another city" width="150">
+                <p>Or this fancy place.</p>
             </div>
             <div class="content-card">
+                <img src="./images/city3.jpg" alt="A fancy card image" width="150">
+                <p>Maybe you prefer this place.</p>
             </div>
             <div class="content-card">
+                <img src="./images/city4.jpg" alt="A fancy card image" width="150">
+                <p>Check out the last one!</p>
             </div>
         </div>
         <div class="quote-container">
+            <p>“Twenty years from now you will be more disappointed by the things you didn’t do than by the ones you did do. So throw off the bowlines. Sail away from the safe harbor. Catch the trade winds in your sails. Explore. Dream. Discover.”</p>
+            <p>- Mark Twain</p>
         </div>
         <div class="signup-container">
+            <div class="signup">
+                <p>Subscribe to our newsletter!</p>
+                <p>Sign up by clicking the button on the right!</p>
+                <button>Sign up</button>
+            </div>
         </div>
         <div class="footer-container">Copyright © The Odin Project 2024</div>
     </body>
