--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <title>Landing Page</title>
     </head>
 
@@ -17,9 +20,11 @@
                 </ul>
             </div>
             <div class="header-content">
-                <h1>Travel is great!</h1>
-                <p>Who doesn't love travel? Traveling allows you to see the world, meet new people and have plenty of new experiences!</p>
-                <button>Start traveling</button>
+                <div class="header-text">
+                    <h1>Travel is great!</h1>
+                    <p class="header-p">Who doesn't love travel? Traveling allows you to see the world, meet new people and have plenty of new experiences!</p>
+                    <button>Start traveling</button>
+                </div>
                 <img src="./images/main.jpg" alt="A fancy header image" width="400">
             </div>
         </div>
