Position main content with flex, add borders to images

--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
         </div>
         <div class="content-container">
             <h2>Best places to visit!</h2>
-            <div class="content-card">
-                <img src="./images/city1.jpg" alt="A photo of the city" width="150">
-                <p>Visit this place!</p>
-            </div>
-            <div class="content-card">
-                <img src="./images/city2.jpg" alt="A photo of another city" width="150">
-                <p>Or this fancy place.</p>
-            </div>
-            <div class="content-card">
-                <img src="./images/city3.jpg" alt="A fancy card image" width="150">
-                <p>Maybe you prefer this place.</p>
-            </div>
-            <div class="content-card">
-                <img src="./images/city4.jpg" alt="A fancy card image" width="150">
-                <p>Check out the last one!</p>
+            <div class="cards-container">
+                <div class="content-card">
+                    <img src="./images/city1.jpg" alt="A photo of the city" width="150">
+                    <p>Visit this place!</p>
+                </div>
+                <div class="content-card">
+                    <img src="./images/city2.jpg" alt="A photo of another city" width="150">
+                    <p>Or this fancy place.</p>
+                </div>
+                <div class="content-card">
+                    <img src="./images/city3.jpg" alt="A fancy card image" width="150">
+                    <p>Maybe you prefer this place.</p>
+                </div>
+                <div class="content-card">
+                    <img src="./images/city4.jpg" alt="A fancy card image" width="150">
+                    <p>Check out the last one!</p>
+                </div>
             </div>
         </div>
         <div class="quote-container">
