Style and position the quote section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <p class="header-p">Who doesn't love travel? Traveling allows you to see the world, meet new people and have plenty of new experiences!</p>
                     <button>Start traveling</button>
                 </div>
-                <img src="./images/main.jpg" alt="A fancy header image" width="400">
+                <img src="./images/main.jpg" alt="A fancy header image" width="400" height="200">
             </div>
         </div>
         <div class="content-container">
@@ -50,8 +50,8 @@
             </div>
         </div>
         <div class="quote-container">
-            <p>“Twenty years from now you will be more disappointed by the things you didn’t do than by the ones you did do. So throw off the bowlines. Sail away from the safe harbor. Catch the trade winds in your sails. Explore. Dream. Discover.”</p>
-            <p>- Mark Twain</p>
+            <p class="quote">“Twenty years from now you will be more disappointed by the things you didn’t do than by the ones you did do. So throw off the bowlines. Sail away from the safe harbor. Catch the trade winds in your sails. Explore. Dream. Discover.”</p>
+            <p class="author">- Mark Twain</p>
         </div>
         <div class="signup-container">
             <div class="signup">
