Style and position sign up section and footer, finish the page

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
         </div>
         <div class="signup-container">
             <div class="signup">
-                <p>Subscribe to our newsletter!</p>
-                <p>Sign up by clicking the button on the right!</p>
+                <div class="signup-text">
+                    <p id="bigger-p">Subscribe to our newsletter!</p>
+                    <p>Sign up by clicking the button on the right!</p>
+                </div>
                 <button>Sign up</button>
             </div>
         </div>
